# lemmy-wikibot-rs

./: .env  Cargo.toml  README.md  excluded_creators.json
src/: lib.rs  main.rs  structs.rs
src/apis/: lemmy_api.rs  mod.rs  wikipedia_api.rs
