[package]
name = "lemmy_wikibot_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
regex = "1.10.2"
reqwest = { version = "0.11.23", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
wikipedia = "0.4.0"
